added bu, updated README.md

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,8 +193,8 @@ bindsym $mod+d exec rofi -show window
 bindsym $mod+x exec urxvt -e ranger
 
 # pulse audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset Master 5%+ #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset Master 5%- #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse set Master 5%+ #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse set Master 5%- #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle # mute sound
 
 # media player controls
