updated weechat theme

--- a/.weechat/buffers.conf
+++ b/.weechat/buffers.conf
@@ -3,22 +3,22 @@
 #
 
 [color]
-current_bg = red
-current_fg = lightcyan
+current_bg = 1
+current_fg = 15
 default_bg = default
-default_fg = default
-hotlist_highlight_bg = default
-hotlist_highlight_fg = magenta
+default_fg = 1
+hotlist_highlight_bg = 8
+hotlist_highlight_fg = 15
 hotlist_low_bg = default
 hotlist_low_fg = white
 hotlist_message_bg = default
-hotlist_message_fg = yellow
+hotlist_message_fg = 9
 hotlist_private_bg = default
 hotlist_private_fg = lightgreen
 none_channel_bg = default
-none_channel_fg = default
-number = lightgreen
-number_char = lightgreen
+none_channel_fg = 1
+number = 9
+number_char = 8
 prefix_bufname = default
 queries_default_bg = default
 queries_default_fg = default
