--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -16,9 +16,9 @@ display_away = local
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
-display_host_join = on
-display_host_join_local = on
-display_host_quit = on
+display_host_join = off
+display_host_join_local = off
+display_host_quit = off
 display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
@@ -60,13 +60,13 @@ temporary_servers = off
 topic_strip_colors = off
 
 [color]
-input_nick = lightcyan
+input_nick = 7
 item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
-message_join = green
-message_quit = red
+message_join = 1
+message_quit = 1
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
@@ -141,3 +141,42 @@ ssl_verify = on
 username = "nvnehi"
 
 [server]
+freenode.addresses = "chat.freenode.net/6697"
+freenode.proxy
+freenode.ipv6 = off
+freenode.ssl = on
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_fingerprint
+freenode.ssl_verify
+freenode.password
+freenode.capabilities
+freenode.sasl_mechanism
+freenode.sasl_username = "nvnehi"
+freenode.sasl_password = "r3ckless"
+freenode.sasl_key
+freenode.sasl_timeout
+freenode.sasl_fail = reconnect
+freenode.autoconnect = off
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks = "nvnehi,nnh,nvnehi_,nnh_"
+freenode.nicks_alternate
+freenode.username
+freenode.realname
+freenode.local_hostname
+freenode.command
+freenode.command_delay
+freenode.autojoin
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.default_msg_kick
+freenode.default_msg_part
+freenode.default_msg_quit
+freenode.notify
