--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "    "
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -83,12 +83,12 @@ nick_color_force = ""
 nick_color_hash = djb2
 nick_color_stop_chars = "_|["
 nick_prefix = ""
-nick_suffix = ""
+nick_suffix = " >>"
 paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
-prefix_action = " *"
+prefix_action = ""
 prefix_align = right
 prefix_align_max = 0
 prefix_align_min = 0
@@ -99,30 +99,30 @@ prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
 prefix_error = "=!="
-prefix_join = "-->"
-prefix_network = "--"
-prefix_quit = "<--"
+prefix_join = ""
+prefix_network = ""
+prefix_quit = ""
 prefix_same_nick = ""
-prefix_suffix = "|"
+prefix_suffix = ""
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "—"
 save_config_on_exit = on
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "-"
+separator_horizontal = "—"
 separator_vertical = ""
-tab_width = 1
+tab_width = 2
 time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
-window_separator_horizontal = on
-window_separator_vertical = on
+window_separator_horizontal = off
+window_separator_vertical = off
 window_title = "WeeChat ${info:version}"
 word_chars_highlight = "!\u00A0,-,_,|,alnum"
 word_chars_input = "!\u00A0,-,_,|,alnum"
@@ -131,43 +131,43 @@ word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [color]
 bar_more = lightmagenta
-chat = default
+chat = 251
 chat_bg = default
-chat_buffer = white
-chat_channel = white
-chat_day_change = cyan
-chat_delimiters = green
-chat_highlight = yellow
+chat_buffer = lightmagenta
+chat_channel = 9
+chat_day_change = 8
+chat_delimiters = 0
+chat_highlight = 12
 chat_highlight_bg = magenta
-chat_host = cyan
-chat_inactive_buffer = default
+chat_host = 8
+chat_inactive_buffer = 2
 chat_inactive_window = default
-chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick = 1
+chat_nick_colors = "1"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = cyan
 chat_nick_prefix = green
 chat_nick_self = white
-chat_nick_suffix = green
-chat_prefix_action = white
-chat_prefix_buffer = brown
+chat_nick_suffix = 8
+chat_prefix_action = 6
+chat_prefix_buffer = 6
 chat_prefix_buffer_inactive_buffer = default
 chat_prefix_error = yellow
-chat_prefix_join = lightgreen
+chat_prefix_join = 8
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
-chat_prefix_quit = lightred
-chat_prefix_suffix = green
-chat_read_marker = magenta
+chat_prefix_quit = 0
+chat_prefix_suffix = 0
+chat_read_marker = 1
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = default
-chat_time_delimiters = brown
+chat_time = 8
+chat_time_delimiters = 0
 chat_value = cyan
 chat_value_null = blue
 emphasized = yellow
@@ -177,7 +177,7 @@ input_text_not_found = red
 item_away = yellow
 nicklist_away = cyan
 nicklist_group = green
-separator = blue
+separator = 0
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -189,11 +189,11 @@ status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_mouse = green
-status_name = white
-status_name_ssl = lightgreen
-status_nicklist_count = default
-status_number = yellow
-status_time = default
+status_name = 7
+status_name_ssl = 7
+status_nicklist_count = 7
+status_number = 7
+status_time = 7
 
 [completion]
 base_word_until_cursor = on
@@ -232,9 +232,23 @@ path = "%h/plugins"
 save_config_on_unload = on
 
 [bar]
+buffers.color_bg = default
+buffers.color_delim = default
+buffers.color_fg = default
+buffers.conditions = ""
+buffers.filling_left_right = vertical
+buffers.filling_top_bottom = horizontal
+buffers.hidden = on
+buffers.items = "buffers"
+buffers.position = top
+buffers.priority = 0
+buffers.separator = on
+buffers.size = 1
+buffers.size_max = 0
+buffers.type = root
 input.color_bg = default
-input.color_delim = cyan
-input.color_fg = default
+input.color_delim = 8
+input.color_fg = 8
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
@@ -242,17 +256,31 @@ input.hidden = off
 input.items = "[input_prompt]+(away),[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
-input.separator = off
+input.separator = on
 input.size = 1
 input.size_max = 0
 input.type = window
+isetbar.color_bg = default
+isetbar.color_delim = 8
+isetbar.color_fg = 1
+isetbar.conditions = ""
+isetbar.filling_left_right = vertical
+isetbar.filling_top_bottom = horizontal
+isetbar.hidden = on
+isetbar.items = "isetbar_help"
+isetbar.position = top
+isetbar.priority = 0
+isetbar.separator = on
+isetbar.size = 3
+isetbar.size_max = 3
+isetbar.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
-nicklist.color_fg = default
+nicklist.color_fg = 1
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -260,27 +288,27 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = blue
-status.color_delim = cyan
-status.color_fg = default
+status.color_bg = default
+status.color_delim = 8
+status.color_fg = 1
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
-status.hidden = off
-status.items = "[time],[buffer_last_number],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],completion"
+status.hidden = on
+status.items = "[time],buffer_number+:+buffer_name+ buffer_modes u+buffer_nicklist_count+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],completion"
 status.position = bottom
 status.priority = 500
-status.separator = off
+status.separator = on
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
-title.color_delim = cyan
-title.color_fg = default
+title.color_bg = default
+title.color_delim = 8
+title.color_fg = 7
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = off
+title.hidden = on
 title.items = "buffer_title"
 title.position = top
 title.priority = 500
@@ -288,6 +316,20 @@ title.separator = off
 title.size = 1
 title.size_max = 0
 title.type = window
+urlbar.color_bg = default
+urlbar.color_delim = default
+urlbar.color_fg = default
+urlbar.conditions = ""
+urlbar.filling_left_right = vertical
+urlbar.filling_top_bottom = horizontal
+urlbar.hidden = on
+urlbar.items = "urlbar_urls"
+urlbar.position = top
+urlbar.priority = 0
+urlbar.separator = off
+urlbar.size = 0
+urlbar.size_max = 0
+urlbar.type = root
 
 [layout]
 
@@ -567,11 +609,17 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
+@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
+@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(perl.iset):button1 = "hsignal:iset_mouse"
+@chat(perl.iset):button2* = "hsignal:iset_mouse"
+@chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
+@chat(perl.iset):wheelup = "/repeat 5 /iset **up"
 @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
@@ -581,6 +629,8 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
 @item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
+@item(buffers):button1* = "hsignal:buffers_mouse"
+@item(buffers):button2* = "hsignal:buffers_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
