--- a/.weechat/iset.conf
+++ b/.weechat/iset.conf
@@ -3,14 +3,14 @@
 #
 
 [color]
-bg_selected = red
+bg_selected = 1
 help_default_value = green
 help_option_name = white
 help_text = default
 option = default
-option_selected = white
+option_selected = 15
 type = brown
-type_selected = yellow
+type_selected = 15
 value = cyan
 value_diff = magenta
 value_diff_selected = lightmagenta
