--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -8,5 +8,107 @@ guile.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
 python.check_license = "off"
+python.listbuffer.autofocus = "on"
+python.listbuffer.channel_min_width = "25"
+python.listbuffer.modes_min_width = "8"
+python.listbuffer.sort_inverted = "on"
+python.listbuffer.sort_order = "users"
+python.listbuffer.users_min_width = "8"
+python.urlbar.ignore = "grep"
+python.urlbar.remember_amount = "25"
+python.urlbar.show_buffername = "on"
+python.urlbar.show_index = "on"
+python.urlbar.show_nick = "on"
+python.urlbar.show_timestamp = "on"
+python.urlbar.time_format = "%H:%M"
+python.urlbar.use_popup = "on"
+python.urlbar.visible_amount = "5"
+python.urlbar.visible_seconds = "5"
+python.urlbuf.display_active_buffer = "on"
+python.urlbuf.display_buffer_number = "on"
+python.urlbuf.display_nick = "off"
+python.urlbuf.display_private = "on"
+python.urlbuf.skip_buffers = ""
+python.urlbuf.skip_duplicates = "on"
+python.urlserver.buffer_short_name = "off"
+python.urlserver.color = "darkgray"
+python.urlserver.color_in_msg = ""
+python.urlserver.debug = "off"
+python.urlserver.display_urls = "on"
+python.urlserver.display_urls_in_msg = "off"
+python.urlserver.http_allowed_ips = ""
+python.urlserver.http_auth = ""
+python.urlserver.http_auth_redirect = "on"
+python.urlserver.http_autostart = "on"
+python.urlserver.http_bg_color = "#f4f4f4"
+python.urlserver.http_css_url = ""
+python.urlserver.http_embed_image = "off"
+python.urlserver.http_embed_youtube = "off"
+python.urlserver.http_embed_youtube_size = "480*350"
+python.urlserver.http_fg_color = "#000"
+python.urlserver.http_hostname = ""
+python.urlserver.http_hostname_display = ""
+python.urlserver.http_open_in_new_page = "on"
+python.urlserver.http_port = ""
+python.urlserver.http_port_display = ""
+python.urlserver.http_prefix_suffix = " "
+python.urlserver.http_scheme_display = "http"
+python.urlserver.http_time_format = "%d/%m/%y %H:%M:%S"
+python.urlserver.http_title = "WeeChat URLs"
+python.urlserver.http_url_prefix = ""
+python.urlserver.msg_ignore_buffers = "core.weechat,python.grep"
+python.urlserver.msg_ignore_dup_urls = "off"
+python.urlserver.msg_ignore_regex = ""
+python.urlserver.msg_ignore_tags = "irc_quit,irc_part,notify_none"
+python.urlserver.msg_require_tags = "nick_"
+python.urlserver.separators = "[|]"
+python.urlserver.url_min_length = "0"
+python.urlserver.urls_amount = "100"
 
 [desc]
+python.listbuffer.autofocus = "Focus the listbuffer in the current window if it isn't already displayed by a window."
+python.listbuffer.channel_min_width = "The minimum width used for the channel name in the channel list. If a channelname is shorter than this amount, the column will be padded with spaces."
+python.listbuffer.modes_min_width = "The minimum width used for modes in the channel list. If a channel has less modes than this amount, the column will be padded with spaces."
+python.listbuffer.sort_inverted = "Invert the sort order for the channel list."
+python.listbuffer.sort_order = "Last used sort order for the channel list."
+python.listbuffer.users_min_width = "The minimum width used for the usercount in the channel list. If the usercount has less digits than this amount, the column will be padded with spaces."
+python.urlbuf.display_active_buffer = "display URLs from the active buffer"
+python.urlbuf.display_buffer_number = "display the buffer's number"
+python.urlbuf.display_nick = "display the nick of the user"
+python.urlbuf.display_private = "display URLs from private messages"
+python.urlbuf.skip_buffers = "a comma separated list of buffer numbers to skip"
+python.urlbuf.skip_duplicates = "skip the URL that is already in the urlbuf"
+python.urlserver.buffer_short_name = "use buffer short name on dedicated buffer (default: "off")"
+python.urlserver.color = "color for urls displayed after message (default: "darkgray")"
+python.urlserver.color_in_msg = "color for urls displayed inside irc message: it is a number (irc color) between 00 and 15 (see doc for a list of irc colors) (default: "")"
+python.urlserver.debug = "print some debug messages (default: "off")"
+python.urlserver.display_urls = "display URLs below messages (default: "on")"
+python.urlserver.display_urls_in_msg = "add shorten url next to the original url (only in IRC messages) (useful for urlserver behind relay/irc) (default: "off")"
+python.urlserver.http_allowed_ips = "regex for IPs allowed to use server (example: "^(123.45.67.89|192.160.*)$") (default: "")"
+python.urlserver.http_auth = "login and password (format: "login:password") required to access to page with list of URLs (note: content is evaluated, see /help eval) (default: "")"
+python.urlserver.http_auth_redirect = "require the login/password (if option "http_auth" is set) for URLs redirections (default: "on")"
+python.urlserver.http_autostart = "start the built-in HTTP server automatically) (default: "on")"
+python.urlserver.http_bg_color = "background color for HTML page (default: "#f4f4f4")"
+python.urlserver.http_css_url = "URL of external Cascading Style Sheet to add (BE CAREFUL: the HTTP referer will be sent to site hosting CSS file!) (empty value = use default embedded CSS) (default: "")"
+python.urlserver.http_embed_image = "embed images in HTML page (BE CAREFUL: the HTTP referer will be sent to site hosting image!) (default: "off")"
+python.urlserver.http_embed_youtube = "embed youtube videos in HTML page (BE CAREFUL: the HTTP referer will be sent to youtube!) (default: "off")"
+python.urlserver.http_embed_youtube_size = "size for embedded youtube video, format is "xxx*yyy" (default: "480*350")"
+python.urlserver.http_fg_color = "foreground color for HTML page (default: "#000")"
+python.urlserver.http_hostname = "force hostname/IP in bind of socket (empty value = auto-detect current hostname) (default: "")"
+python.urlserver.http_hostname_display = "display this hostname in shortened URLs (default: "")"
+python.urlserver.http_open_in_new_page = "open links in new pages/tabs (default: "on")"
+python.urlserver.http_port = "force port for listening (empty value = find a random free port) (default: "")"
+python.urlserver.http_port_display = "display this port in shortened URLs. Useful if you forward a different external port to the internal port (default: "")"
+python.urlserver.http_prefix_suffix = "suffix displayed between prefix and message in HTML page (default: " ")"
+python.urlserver.http_scheme_display = "display this scheme in shortened URLs (default: "http")"
+python.urlserver.http_time_format = "time format in the HTML page (default: "%d/%m/%y %H:%M:%S")"
+python.urlserver.http_title = "title of the HTML page (default: "WeeChat URLs")"
+python.urlserver.http_url_prefix = "prefix to add in URLs to prevent external people to scan your URLs (for example: prefix "xx" will give URL: http://host.com:1234/xx/8) (default: "")"
+python.urlserver.msg_ignore_buffers = "comma-separated list (without spaces) of buffers to ignore (full name like "irc.freenode.#weechat") (default: "core.weechat,python.grep")"
+python.urlserver.msg_ignore_dup_urls = "ignore duplicated URLs (do not add an URL in list if it is already) (default: "off")"
+python.urlserver.msg_ignore_regex = "ignore messages matching this regex (default: "")"
+python.urlserver.msg_ignore_tags = "comma-separated list (without spaces) of tags (or beginning of tags) to ignore (for example, use "notify_none" to ignore self messages or "nick_weebot" to ignore messages from nick "weebot") (default: "irc_quit,irc_part,notify_none")"
+python.urlserver.msg_require_tags = "comma-separated list (without spaces) of tags (or beginning of tags) required to shorten URLs (for example "nick_" to shorten URLs only in messages from other users) (default: "nick_")"
+python.urlserver.separators = "separators for short url list (string with exactly 3 chars) (default: "[|]")"
+python.urlserver.url_min_length = "minimum length for an URL to be shortened (0 = shorten all URLs, -1 = detect length based on shorten URL) (default: "0")"
+python.urlserver.urls_amount = "number of URLs to keep in memory (and in file when script is not loaded) (default: "100")"
