--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -168,7 +168,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin
+freenode.autojoin = "##linux,#archlinux"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
