--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -284,6 +284,13 @@ audio_output {
 #	server	"remote_server"		# optional
 #	sink		"remote_server_sink"	# optional
 }
+
+audio_output {
+  type  "fifo"
+  name  "fifo output"
+  path  "/tmp/mpd.fifo"
+  format          "44100:16:2"
+}
 #
 # An example of a winmm output (Windows multimedia API).
 #
