updated weechat confs

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -68,7 +68,7 @@ item_nick_modes = default
 message_join = 1
 message_quit = 1
 mirc_remap = "1,-1:darkgray"
-nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
+nick_prefixes = "y:9;q:9;a:9;o:9;h:9;v:9;*:9"
 notice = green
 reason_quit = default
 topic_current = default
@@ -180,3 +180,42 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
+snoonet.addresses = "irc.snoonet.org/6697"
+snoonet.proxy
+snoonet.ipv6
+snoonet.ssl = on
+snoonet.ssl_cert
+snoonet.ssl_priorities
+snoonet.ssl_dhkey_size
+snoonet.ssl_fingerprint
+snoonet.ssl_verify
+snoonet.password
+snoonet.capabilities
+snoonet.sasl_mechanism
+snoonet.sasl_username = "nvnehi"
+snoonet.sasl_password = "r3ckless"
+snoonet.sasl_key
+snoonet.sasl_timeout
+snoonet.sasl_fail
+snoonet.autoconnect = off
+snoonet.autoreconnect
+snoonet.autoreconnect_delay
+snoonet.nicks
+snoonet.nicks_alternate
+snoonet.username
+snoonet.realname
+snoonet.local_hostname
+snoonet.command
+snoonet.command_delay
+snoonet.autojoin = "#linuxmasterrace,#mnfh"
+snoonet.autorejoin
+snoonet.autorejoin_delay
+snoonet.connection_timeout
+snoonet.anti_flood_prio_high
+snoonet.anti_flood_prio_low
+snoonet.away_check
+snoonet.away_check_max_nicks
+snoonet.default_msg_kick
+snoonet.default_msg_part
+snoonet.default_msg_quit
+snoonet.notify
