--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -64,6 +64,7 @@ python.urlserver.msg_require_tags = "nick_"
 python.urlserver.separators = "[|]"
 python.urlserver.url_min_length = "0"
 python.urlserver.urls_amount = "100"
+ruby.check_license = "off"
 
 [desc]
 python.listbuffer.autofocus = "Focus the listbuffer in the current window if it isn't already displayed by a window."
