i3 now focuses workspace 1 when starting instead of where cursor was(defaulted to 2nd monitor)

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -204,3 +204,6 @@ bindsym XF86AudioPrev exec playerctl previous
 
 # print screen
 bindsym Print exec scrot -e 'mv $f ~/images/screenshots'
+
+# autoexec
+exec i3-msg workspace 1
