--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -209,10 +209,10 @@ playlist_disable_highlight_delay = 0
 #
 #
 #alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
-alternative_header_first_line_format = {$b$1<$8 {%t}|{%f} $1>$/b}
+alternative_header_first_line_format = {$b$1$8 {%t}|{%f} $1$/b}
 #
-alternative_header_second_line_format = {{$2%a$1}{ - $2%b$2}}|{%D}
-#alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+alternative_header_second_line_format = {{$b$2%a$/b$1}{ - $9%b$b$2}}|{%D$/b}
+#alternative_header_second_line_format = {{$4$b%a$/b$1}{ - $7%b$9}{ ($4%y$9)}}|{%D}
 #
 #now_playing_prefix = $b
 #
